# QuickMealAPI

./: .gitignore  Dockerfile  Makefile  alembic.ini  create_app.py  docker-compose.test.yml  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: ci-tests.yml
src/: .env.test  .test.env  create_app.py  errors_handlers.py  exceptions.py  main.py
src/alembic/: env.py
src/alembic/versions/: 2025_02_15_2240-245816fe92ca_create_user_tables.py  2025_02_27_2225-48aa826593d6_create_category_tables.py  2025_02_27_2226-d2f6343d49c5_create_dishes_tables.py  2025_03_15_2157-243ede1b086f_create_cart_items_tables.py  2025_04_07_1817-96d9e3d06a7b_create_payment_tables.py  2025_04_07_1821-8843577b890e_create_order_tables.py  2025_04_07_2113-795c2634ddf6_create_order_item_tables.py
src/api/: __init__.py  decorators.py
src/api/carts/: views.py
src/certs/: private.pem  public.pem
src/core/: __init__.py  config.py  db_helper.py  errors_handlers.py  log_config.py  middlewares.py
src/repositories/: base_repository.py  cart_repository.py  category_repository.py  dish_repository.py  order_repository.py  payment_repository.py  sqlalchemy_repository.py  user_repositry.py
src/schemas/: cart_schemas.py  category_schema.py  dish_schema.py  enums.py  order_schemas.py  user_schema.py
src/services/: base_service.py  cart_service.py  category_service.py  dish_service.py  order_service.py  user_service.py
src/tests/: conftest.py  utils.py
tests/: conftest.py  utils.py
tests/integration/: conftest.py  test_cart.py  test_category.py  test_dish.py  test_user.py
(+19 files in other folders)
