[tool.poetry]
name = "quickmealapi"
version = "0.1.0"
description = ""
authors = ["_Avvake_ <denisergo18@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic-settings = "^2.7.1"
fastapi = {extras = ["all"], version = "^0.115.8"}
sqlalchemy = "^2.0.38"
asyncpg = "^0.30.0"
alembic = "^1.14.1"
pydantic = {extras = ["email"], version = "^2.10.6"}
python-jose = "^3.3.0"
bcrypt = "^4.2.1"
python-multipart = "^0.0.20"
greenlet = "^3.1.1"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
asgi-lifespan = "^2.1.0"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
